# Ember

./: .gitattributes  .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  ToDo.txt  ToDoAsyncCleanup.txt  ToDoPhysicsCompute.txt  mkdocs.yml  readme.txt
Engine/: CMakeLists.txt
Engine/src/buffers/: buffer.cpp  buffer.h  indexBuffer.cpp  stagingBuffer.cpp  stagingBuffer.h  storageBuffer.cpp  storageBuffer.h  uniformBuffer.cpp  uniformBuffer.h  vertexBuffer.cpp  vertexBuffer.h
Engine/src/components/: bitonicSortGraph.cpp  bitonicSortGraph.h  camera.cpp  camera.h  cameraController.cpp  drawMeshData.cpp  instancedRenderer.cpp  meshRenderer.cpp  meshTester.cpp  pointLight.cpp  postProcessEffects.cpp  postRenderEffects.cpp  settings.cpp  settings.h  spinGlobal.cpp  spinGlobal.h  spinLocal.cpp  spinLocal.h  spotLight.cpp  testInstancedRendering.cpp  transform.h
Engine/src/compute/: asyncCompute.cpp  asyncCompute.h  compute.cpp  computeSession.cpp  computeSession.h  immediateCompute.cpp  immediateCompute.h  postRenderCompute.h  preRenderCompute.h
Engine/src/editor/: bitonicSortGraphEditorWindow.h  dearImGui.cpp  depthBiasEditorWindow.h  editor.cpp  editor.h  editorWindow.cpp  editorWindow.h  fpsEditorWindow.cpp  fpsEditorWindow.h
Engine/src/engine/: application.cpp  application.h  dearImGui.cpp  dearImGui.h  emberEngine.h  eventSystem.cpp  renderCore.cpp  renderCore.h
Engine/src/gameObjectSystem/: component.cpp  component.h  gameObject.h
Engine/src/gpuResources/: computeShader.h  material.cpp  material.h  mesh.cpp  mesh.h  sampler.cpp  shader.h  shaderProperties.cpp  shaderPropertiesPool.cpp  shaderPropertiesPool.h  stagingBufferPool.cpp  stagingBufferPool.h
Engine/src/graphics/: graphics.cpp  graphics.h  lighting.cpp  lighting.h
Engine/src/managers/: bufferManager.cpp  computeShaderManager.cpp  managers.cpp  managers.h  materialManager.cpp  meshManager.cpp  poolManager.cpp  poolManager.h  renderPassManager.cpp  renderPassManager.h  samplerManager.cpp  taskflowManager.cpp  taskflowManager.h  textureManager.cpp  textureManager.h
Engine/src/math/: bounds.cpp  bounds2d.h  emberMath.h  emberRandom.cpp  emberRandom.h  float2.cpp  float2.h  float2x2.cpp  float2x2.h  float2x3.cpp  float2x3.h  float3.cpp  float3x2.cpp  float3x2.h  float3x3.cpp  float3x3.h  float4.cpp  float4.h  float4x4.cpp  float4x4.h  int2.h  int3.h  mathConstants.h  mathFunctions.cpp  mathFunctions.h  ray.cpp  ray.h  uint3.h  vectorSort.h
Engine/src/physics/: emberPhysics.cpp  emberPhysics.h
Engine/src/pushConstants/: computePushConstant.cpp  computePushConstant.h  shadowPushConstant.cpp  shadowPushConstant.h
Engine/src/renderPassesAndPipelines/: computePipeline.cpp  computePipeline.h  forwardOpaquePipeline.cpp  forwardOpaquePipeline.h  forwardPipeline.cpp  forwardPipeline.h  forwardRenderPass.cpp  forwardRenderPass.h  forwardTransparentPipeline.cpp  forwardTransparentPipeline.h  presentPipeline.h  presentRenderPass.cpp  presentRenderPass.h  renderPass.cpp  renderPass.h  skyboxPipeline.cpp  skyboxPipeline.h
Engine/src/renderResources/: buffer.cpp  buffer.h  computeShader.cpp  computeShader.h  material.cpp  material.h  mesh.cpp  mesh.h  shader.cpp  shader.h  shaderProperties.cpp  shaderProperties.h  stagingBuffer.cpp  stagingBuffer.h  storageBuffer.h  uniformBuffer.cpp  uniformBuffer.h
Engine/src/shaders/: CMakeLists.txt  bigDisperse.comp.hlsl  bitonicSort.comp.hlsl  bitonicSortMulti.comp.hlsl  compileHLSL.bat  computePushConstant.hlsli  default.frag.hlsl  default.vert.hlsl  initialPositions.comp.hlsl  interpolation.hlsli  localBitonicSort.comp.hlsl  localDisperse.comp.hlsl  math.hlsli  mathf.hlsli  particle.frag.hlsl  particle.vert.hlsl  postProcessing.comp.hlsl  shadow.vert.hlsl  shadowConstants.h  shadowMapping.hlsli  shadowPushConstant.hlsli  simpleLit.vert.hlsl  skybox.frag.hlsl  skybox.vert.hlsl  sort.comp.hlsl  test.vert.hlsl  testB.vert.hlsl  transparent.frag.hlsl  transparent.vert.hlsl
Engine/src/textureTypes/: sampleTexture2d.cpp  storageSampleTexture2d.cpp  storageSampleTexture2d.h  texture2d.cpp  (+3 more)
Projects/defaultProject/: CMakeLists.txt
Projects/fluidDynamics/: CMakeLists.txt
Projects/unitTests/: CMakeLists.txt
applications/emberEditorApp/: CMakeLists.txt
defaultProject/: CMakeLists.txt
defaultProject/src/: main.cpp
editor/: CMakeLists.txt
editor/src/: main.cpp
engine/: CMakeLists.txt  readme.txt
engine/appEditor/: CMakeLists.txt
engine/appGame/: CMakeLists.txt
engine/appGameDebug/: CMakeLists.txt
engine/appHeadless/: CMakeLists.txt
engine/cmake/: emberVulkanOptions.cmake
engine/common/: commonAccessMask.h  commonBufferUsage.h  commonCamera.h  commonComputeAccessMask.h  commonCullMode.h  commonEvent.h  commonGuiFlags.h  commonGuiStyle.h  commonInput.h  commonLighting.h  commonMaterialType.h  commonMsaaSampleCount.h  commonPipelineState.h  commonRenderQueue.h  commonRendererCreateInfo.h  commonTextureFormat.h  commonTextureUsage.h  commonVertexMemoryLayout.h
engine/core/: CMakeLists.txt  coreBuild.cmake
engine/math/: CMakeLists.txt
engine/rdy for reintegration/: bitonicSort.cpp  bitonicSortGraph.h
engine/shaders/: CMakeLists.txt  readme.txt
engine/src/: emberEngine.h
engine/test/: CMakeLists.txt
engine/vulkanUtility/: vulkanDescriptorSetLayoutBindingToString.h  vulkanDescriptorTypeToString.h  vulkanFormatToString.h  vulkanImageViewTypeToString.h  vulkanShaderStageFlagsToString.h  vulkanVertexInputAttributeDescriptionToString.h  vulkanVertexInputBindingDescriptionToString.h  vulkanVertexInputRateToString.h
fluidDynamics/: CMakeLists.txt
fluidDynamics/src/: main.cpp
projects/defaultProject/: CMakeLists.txt
projects/fluidDynamics/: CMakeLists.txt  ToDo.txt
projects/plotting/: CMakeLists.txt
projects/unitTests/: CMakeLists.txt
unitTests/: CMakeLists.txt  main.cpp  runAllTests.bat  runAllTests.sh  testBounds.h  testEmberRandom.h  testFloat2.h  testFloat2x2.h  testFloat2x3.h  testFloat3.h  testFloat3x2.h  testFloat3x3.h  testFloat4.h  testFloat4x4.h  testGeometry3d.h  testMathf.h  testUint3.h
unitTests/src/: testFloat4.h  testFloat4x4.h
(+2170 files in other folders)
